--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-native-animated-button-textinput",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A react-native button that switches to text-input when pressed",
   "main": "./dist/index.js",
   "license": "MIT",
   "peerDependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": "0.59.5"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/PierreCapo/react-native-animated-button-textinput.git"
-  },
+  }
 }
