--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-button-textinput",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A react-native button that switches to text-input when pressed",
   "main": "./dist/index.js",
   "license": "MIT",
@@ -8,8 +8,15 @@
     "react": "16.8.3",
     "react-native": "0.59.5"
   },
+  "author": {
+    "name": "pierrecapo",
+    "url": "https://twitter.com/i/notifications"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/PierreCapo/react-native-animated-button-textinput.git"
+  },
+  "dependencies": {
+    "tslib": "^1.9.3"
   }
 }
